<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <view
            style="@style/moj_styl"
            class="pl.twoja_domena.rozdzial_8b.Figura"
            android:id="@+id/view"
            android:contentDescription="@string/kolo"/>

        <view
            style="@style/moj_styl"
            class="pl.twoja_domena.rozdzial_8b.Figura"
            android:id="@+id/view2"
            android:contentDescription="@string/elipsa"/>

        <view
            style="@style/moj_styl"
            class="pl.twoja_domena.rozdzial_8b.Figura"
            android:id="@+id/view3"
            android:contentDescription="@string/prostokat"/>

        <view
            style="@style/moj_styl"
            class="pl.twoja_domena.rozdzial_8b.Figura"
            android:id="@+id/view4"
            android:contentDescription="@string/prostakat_okragly"/>

        <view
            style="@style/moj_styl"
            class="pl.twoja_domena.rozdzial_8b.Figura"
            android:id="@+id/view5"
            android:contentDescription="@string/luk"/>

        <view
            style="@style/moj_styl"
            class="pl.twoja_domena.rozdzial_8b.Figura"
            android:id="@+id/view6"
            android:contentDescription="@string/linia"/>
    </LinearLayout>
</ScrollView>
